_sass/_components/_header.scss
.top-header {
  z-index: 1;
}

.header {
  box-shadow: container(box-shadow, 2);
  background-position: center;
  background-size: cover;
  background-image: url("/assets/images/global/header-default.jpg");
  background-color: color(primary, lightest);
  box-shadow: inset 0 0 0 1000px rgba(225, 245, 255, $g-box-shadow-inset-opacity);
}

.header--with-custom-image {
  .header__text {
    @include larger-than(xl) {
      min-height: 35vh;
    }

    @include larger-than(grail) {
      min-height: 40vh;
    }
  }
}

@include darkMode() {
  .header {
    background-image: url("/assets/images/global/header-dark.jpg");
  }
}

